# snake_arena

./: .dockerignore  .gitignore  Dockerfile.api  Dockerfile.orchestrator  docker-compose.yml  nginx-files.conf  nginx-web.conf  pyproject.toml
artifacts/runs/: match-0acab339.run_proto  match-2dba0d8d.run_proto  match-48efbc42.run_proto  match-5b1f13c9.run_proto  match-7e134baf.run_proto  match-96e38a32.run_proto  match-bc92536d.run_proto  match-d19a1cb0.run_proto  match-e6a866a4.run_proto
code_templates/cpp/: snake.cpp  snake.hpp
code_templates/go/: snake.go
code_templates/java/: Snake.java
code_templates/javascript/: snake.js
code_templates/python/: snake.py
code_templates/rust/: snake.rs
code_templates/typescript/: snake.ts
docs/: 01_README_state.md  02_architecture_and_decisions.md  03_subsystems.md  04_storage_design.md  05_database_and_schema.md  06_custom_instructions.md  07_api_frontend_auth.md  08_cpu_and_wall_budgets.md  09_ranking_system.md  10_prelaunch_checklist.md  11_vm_operations.md  arch.md  general.md  storage_design.md
docs/legal/: README.md  acceptable_use_policy.md  privacy_policy.md  terms_of_service.md
frontend/: .env.production  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts  types.ts
frontend/src/components/: BundleSimPlayer.tsx  CodeEditor.tsx  FileTree.tsx  GuideDialog.tsx  ImageUploadPanel.tsx  Layout.tsx  LiveSimPlayer.tsx  MatchViewer.tsx  NewProjectDialog.tsx  QuotaIndicator.tsx  RankedMatchPlayer.tsx  SimPlayer.tsx  TestDialog.tsx  Toast.tsx
frontend/src/lib/: editor.ts  useIsMobile.ts
frontend/src/pages/: EditorPage.tsx  LeaderboardPage.tsx  LegalPage.tsx
frontend/src/sim/: bundleLoader.ts  colors.ts  highlights.ts  renderer.ts  source.ts  store.ts  types.ts  useBundleSource.ts  useLiveSource.ts
hostile_tests/: cpuspin.py  diskfill.py  forkbomb.py  kernelinfo.py  membomb.py  network.py  privesc.py
migrations/: 001.sql  002.sql
own-snake-images/: Dockerfile
sandbox-images/cpp/: Dockerfile  manifest.toml
sandbox-images/cpp/harness/: main.cpp  snake.cpp  snake.hpp  snake_base.hpp  types.hpp
sandbox-images/go/: Dockerfile  manifest.toml
sandbox-images/go/harness/: go.mod  main.go  snake.go  types.go
sandbox-images/java/: Dockerfile  manifest.toml
sandbox-images/java/harness/: pom.xml
sandbox-images/java/harness/src/main/java/: Coord.java  EnvInitData.java  EnvStepData.java  Main.java  Snake.java  SnakeInterface.java  SnakeRep.java  SnakeValues.java
sandbox-images/js/: Dockerfile  manifest.toml
sandbox-images/js/harness/: main.js  package.json
sandbox-images/js/harness/usercode/: snake.js
sandbox-images/proto/: sim_interface.proto
sandbox-images/python/: Dockerfile  manifest.toml  requirements.txt
sandbox-images/python/examples/: sagzig.py  sigzag.py  sleepy.py  snake.py
sandbox-images/python/harness/: main.py
sandbox-images/python/harness/usercode/: snake.py
sandbox-images/rust/: Dockerfile  manifest.toml
sandbox-images/rust/harness/: Cargo.toml  build.rs
sandbox-images/rust/harness/src/: main.rs  snake.rs  snake_trait.rs  types.rs
sandbox-images/typescript/: Dockerfile  manifest.toml
sandbox-images/typescript/harness/: main.ts  package.json  tsconfig.json  types.ts
sandbox-images/typescript/harness/usercode/: snake.ts
scripts/: build-base-images.sh  build-hostiles.sh  build_base_images.sh  build_image.sh  migrate.sh  reset-db.sh  run-hostile.sh  setup.sh
services/api/: pyproject.toml
services/api/api/: auth.py  bundler.py  db.py  main.py  rate_limit.py  redis.py  schemas.py  settings.py
services/api/api/routers/: download.py  guest.py  jobs.py  leaderboard.py  maps.py  matches.py  modes.py  projects.py  test_matches.py  users.py  webhooks.py
services/builder/: pyproject.toml
services/builder/builder/: build.py  cli.py
services/orchestrator/: pyproject.toml
services/orchestrator/orchestrator/: agents.py  builder_daemon.py  bundle.py  cli.py  daemon.py  matchmaker.py  redis_observer.py  replay.py  runner_daemon.py  scheduler_daemon.py  scorer_daemon.py  test_runner_daemon.py
services/runner/: pyproject.toml
services/runner/runner/: agent_container_manager.py  cli.py  cpu_budget_observer.py  match.py  match_results.py  router.py
services/sa_common/: pyproject.toml
services/sa_common/sa_common/: bundler.py  scoring.py  scoring_debug.py  types.py
services/sa_common/sa_common/db/: __init__.py  agent_scores.py  build_jobs.py  connection.py  guest_sessions.py  leaderboard.py  match_jobs.py  matches.py  mode_groups.py  modes.py  notify.py  projects.py  quotas.py  submissions.py  test_match_jobs.py  users.py
services/submitter/: pyproject.toml
services/submitter/submitter/: cli.py  submit.py
sim-artifacts/runs/: match-9873c620.run_proto
sim-image/: Dockerfile
