[project]
name = "snake-arena"
version = "0.0.0"
requires-python = ">=3.12"
dependencies = []


[tool.uv]
package = false

[tool.uv.workspace]
members = ["services/*"]

[tool.uv.sources]
snake-arena-runner = { workspace = true }
snake-arena-builder = { workspace = true }
snake-arena-common = { workspace = true }
snake-arena-orchestrator = { workspace = true }
snake-arena-submitter = { workspace = true }

[dependency-groups]
dev = [
    "snake-arena-runner",
    "snake-arena-builder",
    "snake-arena-common",
    "snake-arena-orchestrator",
    "snake-arena-submitter"
]