[project]
name = "snake-arena"
version = "0.0.0"
requires-python = ">=3.12"
license = { text = "AGPL-3.0-or-later" }
authors = [{ name = "Jesper Fritsch" }]
dependencies = []


[tool.uv]
package = false

[tool.uv.workspace]
members = ["services/*"]

[tool.uv.sources]
snake-arena-runner = { workspace = true }
snake-arena-builder = { workspace = true }
snake-arena-common = { workspace = true }
snake-arena-orchestrator = { workspace = true }
snake-arena-submitter = { workspace = true }
snake-arena-api = { workspace = true }

[dependency-groups]
dev = [
    "snake-arena-runner",
    "snake-arena-builder",
    "snake-arena-common",
    "snake-arena-orchestrator",
    "snake-arena-submitter",
    "snake-arena-api"
]