[project]
name = "snake-arena-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "psycopg[binary]>=3.2",
    "psycopg_pool>=3.2",
    "pyjwt[crypto]>=2.9",
    "python-multipart>=0.0.9",
    "pydantic>=2.13",
    "redis[hiredis]>=5.0",
    "docker>=7.0",
    "snake-arena-common",
    "snake_sim @ git+https://github.com/JesperFritsch/snake_sim.git@master",
]

[project.scripts]
api = "api.main:main"

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv.sources]
snake-arena-common = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["api"]
