[project]
name = "snake-arena-builder"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "docker>=7.0",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[project.scripts]
builder = "builder.cli:main"
