[project]
name = "snake-arena-orchestrator"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "psycopg[binary]>=3.2",
    "snake-arena-common",
    "snake-arena-runner",
]

[project.scripts]
orchestrator = "orchestrator.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["orchestrator"]