[project]
name = "snake-arena-orchestrator"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "psycopg[binary]>=3.2",
    "redis[hiredis]>=5.0",
    "snake-arena-common",
    "snake-arena-runner",
    "snake-arena-builder",
]

[tool.uv.sources]
snake-arena-common  = { workspace = true }
snake-arena-runner  = { workspace = true }
snake-arena-builder = { workspace = true }

[project.scripts]
orchestrator = "orchestrator.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["orchestrator"]