[project]
name = "snake-arena-runner"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "docker>=7.0",
    "pydantic>=2.13",
    "snake-arena-common",
    "snake_sim @ git+https://github.com/JesperFritsch/snake_sim.git@master",
]

[tool.hatch.metadata]
allow-direct-references = true

[project.scripts]
runner = "runner.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["runner"]