[project]
name = "snake-arena-common"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "psycopg[binary]>=3.2",
    "pydantic>=2.13",
]

[project.scripts]
db_user = "sa_common.db.users:main"
db_project = "sa_common.db.projects:main"
db_match_jobs = "sa_common.db.match_jobs:main"
db_build_jobs = "sa_common.db.build_jobs:main"
db_matches = "sa_common.db.matches:main"
db_modes = "sa_common.db.modes:main"
db_mode_groups = "sa_common.db.mode_groups:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["sa_common"]