[project]
name = "snake-arena-submitter"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "docker>=7.0",
    "snake-arena-common",
]

[project.scripts]
submitter = "submitter.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["submitter"]