[package]
name = "harness"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.14.6"
tonic-prost = "0.14.6"
prost = "0.14.3"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures-core = "0.3"

[build-dependencies]
tonic-prost-build = "0.14.6"
